changed floating buttons to inline-block

--- a/projects/index.html
+++ b/projects/index.html
@@ -7,25 +7,25 @@ layout: default
     background-color: black;
 }
 .big_button {
-    background-color: #e75757;
-    color: white;
+    width: 50%;
+    display: inline-block;
     text-align: center;
     height: 200px;
     line-height: 200px;
+    background-color: #00979f;
+    color: white;
     font-size: 32px;
-    width: 50%;
-
 }
 .big_button:hover {
-    background-color: #e07e7e;
+    background-color: #20b7bf;
 }
 </style>
 
 
 <h1>Projects</h1>
 
-<a href='/projects/javascript'><div class='big_button' style='float:left;'>JavaScript</div></a>
-<a href='/projects/arduino'><div class='big_button' style='float:right;'>Arduino</div></a>
+<a href='/projects/javascript'><div class='big_button' style='float:left;'>JavaScript</div></a
+><a href='/projects/arduino'><div class='big_button' style='float:right;'>Arduino</div></a>
 
 <p>
 I've attempted a variety of different projects, physical and software, and only some of which I have written about here.
