forgot to remove the floating

--- a/projects/index.html
+++ b/projects/index.html
@@ -24,8 +24,8 @@ layout: default
 
 <h1>Projects</h1>
 
-<a href='/projects/javascript'><div class='big_button' style='float:left;'>JavaScript</div></a
-><a href='/projects/arduino'><div class='big_button' style='float:right;'>Arduino</div></a>
+<a href='/projects/javascript'><div class='big_button'>JavaScript</div></a
+><a href='/projects/arduino'><div class='big_button'>Arduino</div></a>
 
 <p>
 I've attempted a variety of different projects, physical and software, and only some of which I have written about here.
