better file naming

--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -2,50 +2,50 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="https://joeiddon.github.io/projects/project.css">
+<link rel='stylesheet' href='https://joeiddon.github.io/projects/project.css'>
 
 <h1> Arduinos </h1>
 
-<p> Welcome to my arduino-based projects. If you want to read a little bit about arduinos, visit the <a href="https://joeiddon.github.io/projects/arduino/about">about page</a> that I made on them. Otherwise, click on any of the projects below to see what theyre about... </p>
+<p> Welcome to my arduino-based projects. If you want to read a little bit about arduinos, visit the <a href='https://joeiddon.github.io/projects/arduino/about'>about page</a> that I made on them. Otherwise, click on any of the projects below to see what theyre about... </p>
 
 
 <table>
   <tr>
     <td>
-      <a href="https://joeiddon.github.io/projects/arduino/slideRobotArm">
-      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/slideRobotArm.JPG"></img>
+      <a href='https://joeiddon.github.io/projects/arduino/slide_robot_arm'>
+      <img class='project_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/slideRobotArm.JPG'></img>
       </a>
     </td>
     
     <td>
-      <a href="https://joeiddon.github.io/projects/arduino/mg996rRobotArm">
-      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/robotArm.jpg"></img>
+      <a href='https://joeiddon.github.io/projects/arduino/mg996r_robot_arm'>
+      <img class='project_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/robotArm.jpg'></img>
       </a>
     </td>
   </tr>
 
   <tr>
     <td>
-      <a href="https://joeiddon.github.io/projects/arduino/quadropod">
-      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/quadropod.png"></img>
+      <a href='https://joeiddon.github.io/projects/arduino/quadropod'>
+      <img class='project_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/quadropod.png'></img>
       </a>
     </td>
     <td>
-      <a href="https://joeiddon.github.io/projects/arduino/bitcoin">
-      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/bitcoin_side.jpeg"></img>
+      <a href='https://joeiddon.github.io/projects/arduino/bitcoin'>
+      <img class='project_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/bitcoin_side.jpeg'></img>
       </a>
     </td>
   </tr>
   
   <tr>
     <td>
-      <a href="https://joeiddon.github.io/projects/arduino/laser">
-      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/mirrorLASER.jpg"></img>
+      <a href='https://joeiddon.github.io/projects/arduino/laser'>
+      <img class='project_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/mirrorLASER.jpg'></img>
       </a>
     </td>
     <!--<td>
-      <a href="https://joeiddon.github.io/projects/arduino/bitcoin">
-      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/bitcoin_side.jpeg"></img>
+      <a href='https://joeiddon.github.io/projects/arduino/bitcoin'>
+      <img class='project_img' src='https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/bitcoin_side.jpeg'></img>
       </a>
     </td>-->
   </tr>
