--- a/projects/javascript/chase.html
+++ b/projects/javascript/chase.html
@@ -4,15 +4,15 @@ layout: default
 
 <h1>A Game made in my own 3d engine</h1>
 
-<h2><a href="https://joeiddon.github.io/Chase/chase.html">play here (instructions on first screen)</a></h2>
+<h2><a href='https://joeiddon.github.io/chase/chase.html'>play here (instructions on first screen)</a></h2>
 
 <p>
-After getting a basic 3d engine working (see that post <a href="https://joeiddon.github.io/projects/javascript/simulating3d">here</a>) I wanted to test it out with a little game. The idea was simple: each time you take a step, a "zombie" also takes a step directly towards you (but not the same length step as you). The aim is to simply try and walk past the pillars (where the zombie starts) without getting touched. It makes for quite a fun game (link at top).
+After getting a basic 3d engine working (see that post <a href='https://joeiddon.github.io/projects/javascript/simulating_threed'>here</a>) I wanted to test it out with a little game. The idea was simple: each time you take a step, a 'zombie' also takes a step directly towards you (but not the same length step as you). The aim is to simply try and walk past the pillars (where the zombie starts) without getting touched. It makes for quite a fun game (link at top).
 </p>
 
 <p>
 As for the code, since I was still testing 3d things, I hadn't made an actual javascript library at the time. That meant the code is really messy and unreadable - so I have never re-visited the game. In addition to the fact that there isn't really much to say about the coding aspect, I won't bother trying to explain anything here.</p>
 
 <p>
-Feel free to try and work through the code <a href="https://github.com/joeiddon/chase">here on GitHub</a> but I wouldn't advise it!
+Feel free to try and work through the code <a href='https://github.com/joeiddon/chase'>here on GitHub</a> but I wouldn't advise it!
 </p>
