--- a/projects/arduino/bitcoin.html
+++ b/projects/arduino/bitcoin.html
@@ -4,11 +4,11 @@ layout: default
 
 <h1>Wireless bitcoin price display</h1>
 
-<p>I had had one of these <a href="https://learn.adafruit.com/adafruit-feather-huzzah-esp8266/overview">adafruit feathers</a> lying around which has a built-in ESP8266 wifi module. So I decided to test out its capabilities by making a quick little project that would display the current bitcoin price in binary on some rows of LEDs.</p>
+<p>I had had one of these <a href='https://learn.adafruit.com/adafruit-feather-huzzah-esp8266/overview'>adafruit feathers</a> lying around which has a built-in ESP8266 wifi module. So I decided to test out its capabilities by making a quick little project that would display the current bitcoin price in binary on some rows of LEDs.</p>
 
 <p>After reading up on the module, I setup a nodeJS server to practice some HTTP requests and get the board working.</p>
 
-<p>I then needed to find a lightweight website that would allow me to extract the current price. I came across this <a href="https://api.coindesk.com/v1/bpi/currentprice.json">coindesk json api</a></p>
+<p>I then needed to find a lightweight website that would allow me to extract the current price. I came across this <a href='https://api.coindesk.com/v1/bpi/currentprice.json'>coindesk json api</a></p>
 
 <p>After succesfully working out a way of extracting the price from that, I then worked on the LED display aspect. The price of bitcoin was roughly 8000 pounds, but having spiked on the 16th December to 14,592, I would need 14 bits to safely be able to display the full price (allowing me up to 16383).</p>
 
@@ -16,18 +16,18 @@ layout: default
 
 <p>I tested the circuit with some jumpers:</p>
 
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/zsb0kWt-egM?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width='1280' height='720' src='https://www.youtube.com/embed/zsb0kWt-egM?mute=1&rel=0&modestbranding=1&showinfo=0&color=white' frameborder='0' allowfullscreen=''></iframe>
 
 <!--<p>And when I put my phone in slow-motion, you can see them flickering (partly also due to the shutter speed)</p>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe width='1280' height='720' src='https://www.youtube.com/embed/?mute=1&rel=0&modestbranding=1&showinfo=0&color=white' frameborder='0' allowfullscreen=''></iframe>
 -->
 
-<p>I then just needed to finish writing the code (available on github <a href="https://github.com/joeiddon/BinaryBitcoin">here</a>) and connnect an old 1S lipo from a quadcopter and it was working!</p>
+<p>I then just needed to finish writing the code (<a href='https://github.com/joeiddon/bitcoin_in_binary'>GitHub</a>) and connnect an old 1S lipo from a quadcopter and it was working!</p>
 
 <p>Here are some photos of the finished thing. (the price at the time was: 01111110100110 which is 8102 pounds).</a>
 
-<img src="/images/bitcoin_side.jpeg"></img>
-<img src="/images/bitcoin_top.jpg"></img>
-<img src="/images/feather_top.jpg"></img>
-<img src="/images/feather_front.jpg"></img>
-<img src="/images/lipo.jpg"></img>
+<img src='/images/bitcoin_side.jpeg'></img>
+<img src='/images/bitcoin_top.jpg'></img>
+<img src='/images/feather_top.jpg'></img>
+<img src='/images/feather_front.jpg'></img>
+<img src='/images/lipo.jpg'></img>
