--- a/projects/javascript/gravity.html
+++ b/projects/javascript/gravity.html
@@ -4,25 +4,24 @@ layout: default
 
 <h1>A Simulating of Gravity</h1>
 
-<h2><a href="https://joeiddon.github.io/GravitySimulation/">run the simulation here</a></h2>
-<!--<h2><a href="https://joeiddon.github.io/UltiGravity/?100000,4,1,20,1,0,1,//G_Constant(stength_of_gravity),no_balls,min_radius,max_radius,starting_velocity,merge_on_collision,tracing">run a random spawning simulation here</a></h2>-->
+<h2><a href='https://joeiddon.github.io/gravity/'>run the simulation here</a></h2>
 
 <p>
-This second simulation shares some aspects to my first <a href="https://joeiddon.github.io/projects/javascript/bouncingBall">bouncing ball</a> but instead of the focus on being the collision between balls in space, this simulation focuses on how balls with different masses interact through gravity.
+This second simulation shares some aspects to my first <a href='https://joeiddon.github.io/projects/javascript/balls'>balls</a> one but instead of the focus on being the collision between balls, this simulation focuses on how balls with different masses interact through gravity.
 </p>
 
 <p>
-The equation for gravity (taken from <a href="https://en.wikipedia.org/wiki/Gravity">this wikipedia page on gravity)</a> is:
+The equation for gravity (SVG from <a href='https://en.wikipedia.org/wiki/Gravity'>wikipedia</a>) is:
 </p>
 
-<img src="https://wikimedia.org/api/rest_v1/media/math/render/svg/8c6ee5510ba3c7d6664775c0e76b53e72468303a"></img>
+<img src='https://wikimedia.org/api/rest_v1/media/math/render/svg/8c6ee5510ba3c7d6664775c0e76b53e72468303a'></img>
 
 <p>
 Where F is the force, m1 and m2 are the masses of the objects interactng, r is the distance between the centers of the masses and G is the gravitational constant.
 </p>
 
 <p>
-In my script I applied this formula exactly, but changed the gravitational constant so that it is more suited to a simulation (this param can be adjusted in the URL). Also, this is the equation to get the attractional force between the two masses, but in my simulation, what is needed is the acceleration...
+In my script I applied this formula exactly, but changed the gravitational constant so that it is more suited to a simulation. Also, this is the equation to get the attractional force between the two masses, but in my simulation, what is needed is the acceleration...
 </p>
 
 <p>
@@ -69,5 +68,5 @@ function applyGravity(){
 </pre>
 
 <p>
-If you are interested in viewing the rest of the code, both the versions (links at top) are on my GitHub (link at top right). They are in different repositories so you may have to do some digging! However, I recommend you look at the one where you can control the positions as that code is cleaner, <a href="https://github.com/joeiddon/GravitySimulation/blob/master/script.js">code here</a>.
+The full code can be found <a href='https://github.com/joeiddon/gravity'>here on GitHub</a>.
 </p>
