--- a/projects/javascript/game_of_life.html
+++ b/projects/javascript/game_of_life.html
@@ -4,9 +4,9 @@ layout: default
 
 <h1>Conway's Game Of Life</h1>
 
-<h2><a href="https://joeiddon.github.io/GameOfLife">Check it out here</a></h2>
+<h2><a href='https://joeiddon.github.io/game_of_life'>Check it out here</a></h2>
 
-<p>The Game of Life, created by John Conway, is a cellular automaton. The game is "played" on an infinite, orthogonal 2 dimensional grid that marks out cells.</p>
+<p>The Game of Life, created by John Conway, is a cellular automaton. The game is 'played' on an infinite, orthogonal 2 dimensional grid that marks out cells.</p>
 
 <p>Each cell can be in one of two states: alive and dead. In my simulation, these have been represente as white and black respaectively.</p>
 
