--- a/projects/javascript/paint.html
+++ b/projects/javascript/paint.html
@@ -4,8 +4,8 @@ layout: default
 
 <h1>Paint in the HTML5 Canvas</h1>
 
-<h2><a href="https://joeiddon.github.io/Paint">Basic Paint Here</a></h2>
-<h2><a href="https://joeiddon.github.io/Paint/floodfill">Floodfill Paint Here</a></h2>
+<h2><a href='https://joeiddon.github.io/paint'>Basic Paint Here</a></h2>
+<h2><a href='https://joeiddon.github.io/paint/floodfill'>Floodfill Paint Here</a></h2>
 
 <p>
 These are just some simple paint applications I made so I can use them for when I need to visualise or draw something quickly and I don't have any paper.
@@ -16,9 +16,9 @@ The first one is just simple black lines on a white background and was coded usi
 </p>
 
 <pre>
-"mousedown"
-"mouseup"
-"mousemove"
+'mousedown'
+'mouseup'
+'mousemove'
 </pre>
 
 <p>
@@ -34,7 +34,7 @@ I first built a framework around the idea of large pixels (which you can see whe
 </p>
 
 <p>
-Now came the <a href="https://en.wikipedia.org/wiki/Flood_fill">floodfill</a> algorithm. It is a good example of a concise recursive algorithm and works on the principle that every pixel in a region has a neighbour that is also in this region. Due to this, as long as you can identify one pixel coordinate in a region you want to fill, all you have to do is recursively fill in its neighbours in that region (by testing if off the screen or changed colour) and then the region will be filled.
+Now came the <a href='https://en.wikipedia.org/wiki/Flood_fill'>floodfill</a> algorithm. It is a good example of a concise recursive algorithm and works on the principle that every pixel in a region has a neighbour that is also in this region. Due to this, as long as you can identify one pixel coordinate in a region you want to fill, all you have to do is recursively fill in its neighbours in that region (by testing if off the screen or changed colour) and then the region will be filled.
 </p>
 
 <p>
