most recent payment

--- a/club/log.html
+++ b/club/log.html
@@ -22,7 +22,8 @@ var rws = [
 ["3x Arduino Nano",          "5.49"              ],
 ["12x SG92R Servos",         "27.68"             ],
 ["PCA9685 Servo Controller", "2.52"              ],
-["6x SG92R Servos",          "16.43"             ]
+["6x SG92R Servos",          "16.43"             ],
+["4x L298n Motor Driver",    "9.59"              ]
 ]
 for (var r = 2; r < rws.length; r++){
 	console.log(r)
