--- a/club/log.html
+++ b/club/log.html
@@ -23,7 +23,8 @@ var rws = [
 ["12x SG92R Servos",         "27.68"             ],
 ["PCA9685 Servo Controller", "2.52"              ],
 ["6x SG92R Servos",          "16.43"             ],
-["4x L298n Motor Driver",    "9.59"              ]
+["4x L298n Motor Driver",    "9.59"              ],
+["8x Geared Motors",         "17.54"             ]
 ]
 for (var r = 2; r < rws.length; r++){
 	console.log(r)
